--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
 <head>
 	<title>My_Name Homepage</title>
@@ -9,6 +9,10 @@
 		<p>This page was generated from Wes' File Structure Template Repo.</p>
 		
 		<p>Go crazy and customize me.</p>
+		<ul>
+			<li>art 101</li>
+			<li>cmpm 27</li>
+		</ul>	
 	</main>
 
 
