--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<li>art 101</li>
 			<li>cmpm 27</li>
 		</ul>	
-		<img src="/imgindie.jpeg" alt="HTML5 Icon" width="128" height="128">
+		<img src="/img/indie.jpeg" alt="HTML5 Icon" width="128" height="128">
 	</main>
 
 
