--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 02</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div id='content'<div>
+	<h1>Hello World<h1>
 
+		<p>Our names are Zac and Diego. We are both in the AGPM Program and both of us have coding experience.
+				Zac is currently playing Assassin's Creed Black Flag and I have taken a break from Elden Ring.
+		</p>
 </body>
 </html>
