--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
-<body>
+	<head>
+		<title>Lab X - Subject/Topic</title>
+		<link rel="stylesheet" type="text/css" href="../css/site.css">
+		<link rel="stylesheet" type="text/css" href="css/lab.css">
+	</head>
+	<body>
+		<h1>Assignment Details<h1>
+		<p>The subject of this lab was to correctly navigate our file structure and
+			to add new html files.
+		</p>
+		<h2>Challenges<h2>
+			<p>The one problem I had was adding an image. I'm still not entirely sure
+				what the problem is as I had another image already added and just replaced
+				the file location.
+			</p>
+		<h3>The Results<h3>
+			<p>Well, you're looking at the html I created. Here is the file structure
+				I created:
+			</p>
+			<img src="/img/file-structures.png">
 
-</body>
+
+	</body>
 </html>
