--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>My_Name Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
-	
-	
+
+
 </head>
 <body>
-	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
-		
-		<p>Go crazy and customize me.</p>
+	<div id='intro'<div>
+	<h1>Brief Introduction<h1>
+
+		<p>My name is Diego Agurto. I'm an AGPM Major pursuing a position as a game artist in the game industry.
+I was born in Peru and moved to the U.S. when I was 3 with my parents. I live at Oakes and this is my very last quarter
+on campus as I'm graduating soon.
+		</p>
+
+		<p>I love 3d modeling and texturing; I'm currently studying 3d and traditional sculpture. I love to stay active so I
+like to play soccer and go to the gym.
+		</p>
+
+		<img id="my-portrait" img src="/img/lab3photo.JPG" alt="HTML5 Icon" width="128" height="128">
+
+<div class="Assignments">
+	<h2>Assignments:</h2>
 		<ul>
-			<li>art 101</li>
-			<li>cmpm 27</li>
-		</ul>	
-		<img src="img/indie.jpeg">
-	</main>
+			<li><a href="lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
+			<li><a href="lab3/index.html">Lab 3 File Structures</a></li>
+			<li><a href="lab4/index.html">Lab 4</a></li>
+			<li><a href="lab5/index.html">Lab 5</a></li>
+			<li><a href="lab6/index.html">Lab 6</a></li>
+		</ul>
+	</div>
 
 
 </body>
