--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ on campus as I'm graduating soon.
 like to play soccer and go to the gym.
 		</p>
 
-		<img id="my-portrait" img src="/img/lab3photo.JPG" alt="HTML5 Icon" width="128" height="128">
+		<img id="my-portrait" img src="img/lab3photo.JPG">
 
 <div class="Assignments">
 	<h2>Assignments:</h2>
