--- a/lab3/index.html
+++ b/lab3/index.html
@@ -19,7 +19,7 @@
 			<p>Well, you're looking at the html I created. Here is the file structure
 				I created:
 			</p>
-			<img src="/img/file-structures.png">
+			<img src="img/file-structures.png">
 
 
 	</body>
