--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 	<div id='intro'<div>
-	<h1>Brief Introduction<h1>
+
+			<img id="my-portrait" img src="img/lab3photo.JPG">
+
+	<h1>Intro<h1>
 
 		<p>My name is Diego Agurto. I'm an AGPM Major pursuing a position as a game artist in the game industry.
 I was born in Peru and moved to the U.S. when I was 3 with my parents. I live at Oakes and this is my very last quarter
@@ -19,9 +22,9 @@ on campus as I'm graduating soon.
 like to play soccer and go to the gym.
 		</p>
 
-		<img id="my-portrait" img src="img/lab3photo.JPG">
 
-<div class="Assignments">
+
+<div class="assignments">
 	<h2>Assignments:</h2>
 		<ul>
 			<li><a href="lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
