--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 4 - Pseudocoding</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+
+	<h1>Lab 4 - Psuedocoding and Problem-solving</h1>
+
+	<div class="cooking_rice">
+		<h2>How to cook rice</h2>
+			<ul>
+				<li>Step 1 - Wash rice using a strainer</li>
+				<li>Step 2 - Mince garlic</li>
+				<li>Step 3 - Sear the garlic in the rice cooker with some oil</li>
+				<li>Step 4 - Add water (a little bit more than amount of rice)</li>
+				<li>Step 5 - Add rice, set rice cooker to cook, and wait</li>
+				<li>Step 6 - Enjoy!</li>
+
+			</ul>
+		</div>
+
+		<div class="2dplatformer">
+			<h2>How to create a 2d Platforming game</h2>
+				<p>
+					<pre>
+/**
+ * 2D Platformer
+ *
+ * Pseudocode for creating a 2D Platforming game
+ *
+ * @link   https://didigurto.github.io/art101/lab4/index.html
+ * @file   This files defines the MyClass class.
+ * @author Diego Agurto
+ */
+
+//1.Generating 2d environment
+//2. Creating main character
+//3. Establishing user input
+//4. Validating user input
+//5. Setting point system
+//6. Establishing win-state
+					</pre>
+				</p>
+			</div>
+
+	<div id='task_4'<div>
+
+				<h3>Challenge<h3>
+
+					<p>For this Lab, there weren't many challenges. I did like the challenge of breaking up
+						a common and more difficult task into sections as it seems like it makes complex procedures
+						much more doable.
+					</p>
+
+				<h3>Problems<h3>
+					<p>Everything went smoothly for the most part,however, I did forget how to link a div class
+						in CSS. Luckily, my lab partner remembered.
+					</p>
+
+					<h3>Results<h3>
+						<p>The results were simple, yet nice looking lists on another section of my class website.
+							As well as an understanding of pseudocode and more practice regarding CSS and HTML syntax.
+						</p>
+				<img id="lab4_01" img src="img/lab4_01.png">
+
+
 
 </body>
 </html>
