--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - Data Types and Variables </title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
+	<img id="lab5_photo" img src="img/lab5_photo.jpg">
 <body>
+	<h1>Challenge<h1>
+
+		<p>The challenge for this lab was revisiting JavaScript.
+		</p>
+
+	<h1>Problems<h1>
+		<p>I had forgotten the syntax for the coding and ran into a declaration mistake.
+			Everything else went smoothly for the most part.
+		</p>
+
+		<h1>Results<h1>
+			<p>The results was some Javascript and linking files practice.
+			</p>
+
+	 <h2>Script Output</h2>
+	 <div class=output>
+	       <script type="text/javascript" src="js/lab.js"></script>
+	 </div>
+
 
 </body>
 </html>
