--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
-<body>
+	<head>
+		<title>Lab X - Subject/Topic</title>
+		<link rel="stylesheet" type="text/css" href="../css/site.css">
+		<link rel="stylesheet" type="text/css" href="css/lab.css">
+	</head>
+	<body>
+		<h1>Lab 2<h1>
 
-</body>
+	</body>
 </html>
