--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6 - Arrays and Objects</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
+
+<img id="lab06_photo" img src="img/la06_photo.png">
+
 <body>
+	<h1>Challenge<h1>
+
+		<p>The challenge for this lab was revisiting JavaScript.
+		</p>
+
+	<h1>Problems<h1>
+		<p>I had forgotten the syntax for the coding and ran into a declaration mistake.
+			Everything else went smoothly for the most part.
+		</p>
+
+		<h1>Results<h1>
+			<p>The result of the lab was getting some Javascript practice done.
+			</p>
+
+    <div>
+        <h2>Script Output</h2>
+        <script type="text/javascript" src="js/lab.js"></script>
+    </div>
 
 </body>
 </html>
