--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ like to play soccer and go to the gym.
 			<li><a href="lab4/index.html">Lab 4</a></li>
 			<li><a href="lab5/index.html">Lab 5</a></li>
 			<li><a href="lab6/index.html">Lab 6</a></li>
+			<li><a href="lab7/index.html">Lab 7 Functions</a></li>
 		</ul>
 	</div>
 
