--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@ like to play soccer and go to the gym.
 			<li><a href="lab5/index.html">Lab 5</a></li>
 			<li><a href="lab6/index.html">Lab 6</a></li>
 			<li><a href="lab7/index.html">Lab 7 Functions</a></li>
+			<li><a href="lab8/index.html">Lab 8 Anon Functions and Callbacks</a></li>
+			<li><a href="lab9/index.html">Lab 9 </a></li>
+			<li><a href="lab10/index.html">Lab 10 </a></li>
+
+
 		</ul>
 	</div>
 
