--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ like to play soccer and go to the gym.
 			<li><a href="lab8/index.html">Lab 8 Anon Functions and Callbacks</a></li>
 			<li><a href="lab9/index.html">Lab 9 </a></li>
 			<li><a href="lab10/index.html">Lab 10 </a></li>
+			<li><a href="lab11/index.html">Lab 11 </a></li>
 
 
 		</ul>
