--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ like to play soccer and go to the gym.
 <div class="assignments">
 	<h2>Assignments:</h2>
 		<ul>
+			<li><a href="fishtinder/index.html">Fish Tinder </a></li>
 			<li><a href="lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
 			<li><a href="lab3/index.html">Lab 3 File Structures</a></li>
 			<li><a href="lab4/index.html">Lab 4</a></li>
